# scripts

./: .gitignore  README.md  from_meta.py  get_column_info.py  get_tables.py  get_tables_html.py  load_old_data.py  main.py  makefile  pyproject.toml  read_db.py  scripts.py
alfalfa/: get_column_info.py  load_data.py
alfalfa/tables/: main_data.csv  main_info.csv  main_info.txt  raw_info.csv
app/hyperleda/: get_column_info.py
app/vizier/: main.py
htmls/: objdesc.html  objtype.html
hyperleda/: get_column_info.py  load_data.py  load_old_data.py
hyperleda/tables/: bref04_info.csv
hyperleda_scripts/: __init__.py  cli.py
hyperleda_scripts/leda/: __init__.py  docker-compose.yaml  main.py
hyperleda_scripts/leda/tables/: designation_info.csv  m000_info.csv
hyperleda_scripts/vizier/: __init__.py  hyperleda_manager.py  main.py  vizier_manager.py
scripts/hyperleda/: load_old_data.py
scripts/vizier/: __init__.py  hyperleda_manager.py  vizier_manager.py
tables/: bref04_info.csv  designation_info.csv  m000_info.csv  objtype.csv  units.csv
vizier/: helpers.py  hyperleda_manager.py  main.py  vizier_manager.py  vizier_requests.py
