[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroquery>=0.4.9.post1",
    "build>=1.2.2.post1",
    "click>=8.1.8",
    "hyperleda",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "structlog>=25.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
hyperleda = { git = "https://github.com/HyperLEDA/client.git" }

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
ignore = [
    "N818", # ignore SomeException -> SomeError rule
    "B024", # abstract class without abstract methods
    "B017", # ignore assertRaises(Exception)
    "B027", # empty method without abstract decorator
]
# see https://docs.astral.sh/ruff/rules/ for description of each rule set.
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "YTT",
    "B",
    "A",
    "C4",
    "DTZ",
    "PIE",
    "RET",
    "SLF",
    "PTH",
    "PLE",
    "FLY",
    "NPY201",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F403", # ignore star imports warning in __init__ files
]
